# pplug-netman

./: README  configure.ac  meson.build
data/: Makefile.am  lxplug-netman.ui  meson.build  org.rpi.nm-applet.gschema.xml.in
data/icons/hicolor/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
debian/: changelog  control  copyright  lpplug-netman.install  lxplug-netman.install  pplug-netman-schema.install  wfplug-netman.install
plugins/: Makefile.am  ap-menu-item.c  ap-menu-item.h  applet-agent.c  applet-device-wifi.c  applet-device-wifi.h  applet-vpn-request.c  applet.c  applet.gresource.xml  applet.h  mobile-helpers.c  netman-resources.c
plugins/connection-editor/: Makefile.am  page-mobile.c
plugins/netman/: netman.c
po/: POTFILES.in  en_GB.po  meson.build  pt_BR.po  sk.po  zh_CN.po
src/: ap-menu-item.c  ap-menu-item.h  applet-device-broadband.c  applet-device-bt.c  applet-device-ethernet.c  applet-device-wifi.c  applet-dialogs.c  applet-vpn-request.c  applet.c  applet.h  meson.build  mobile-helpers.c  netman.c  netman.cpp  netman.h  netman.hpp  nm-default.h  nm-macros-internal.h  plugin-utils.c  utils.c
src/nm-utils/: nm-default.h  nm-macros-internal.h
