## Process this file with automake to produce Makefile.in

appicondir = $(datadir)/icons/hicolor/22x22/apps
appicon_DATA = 	nm-adhoc.png \
				nm-device-wwan.png \
				nm-mb-roam.png \
				nm-secure-lock.png \
				nm-stage01-connecting01.png \
				nm-stage01-connecting02.png \
				nm-stage01-connecting03.png \
				nm-stage01-connecting04.png \
				nm-stage01-connecting05.png \
				nm-stage01-connecting06.png \
				nm-stage01-connecting07.png \
				nm-stage01-connecting08.png \
				nm-stage01-connecting09.png \
				nm-stage01-connecting10.png \
				nm-stage01-connecting11.png \
				nm-stage02-connecting01.png \
				nm-stage02-connecting02.png \
				nm-stage02-connecting03.png \
				nm-stage02-connecting04.png \
				nm-stage02-connecting05.png \
				nm-stage02-connecting06.png \
				nm-stage02-connecting07.png \
				nm-stage02-connecting08.png \
				nm-stage02-connecting09.png \
				nm-stage02-connecting10.png \
				nm-stage02-connecting11.png \
				nm-stage03-connecting01.png \
				nm-stage03-connecting02.png \
				nm-stage03-connecting03.png \
				nm-stage03-connecting04.png \
				nm-stage03-connecting05.png \
				nm-stage03-connecting06.png \
				nm-stage03-connecting07.png \
				nm-stage03-connecting08.png \
				nm-stage03-connecting09.png \
				nm-stage03-connecting10.png \
				nm-stage03-connecting11.png \
				nm-tech-3g.png \
				nm-tech-cdma-1x.png \
				nm-tech-edge.png \
				nm-tech-evdo.png \
				nm-tech-gprs.png \
				nm-tech-hspa.png \
				nm-tech-lte.png \
				nm-tech-umts.png \
				nm-vpn-active-lock.png \
				nm-vpn-connecting01.png \
				nm-vpn-connecting02.png \
				nm-vpn-connecting03.png \
				nm-vpn-connecting04.png \
				nm-vpn-connecting05.png \
				nm-vpn-connecting06.png \
				nm-vpn-connecting07.png \
				nm-vpn-connecting08.png \
				nm-vpn-connecting09.png \
				nm-vpn-connecting10.png \
				nm-vpn-connecting11.png \
				nm-vpn-connecting12.png \
				nm-vpn-connecting13.png \
				nm-vpn-connecting14.png \
				nm-wwan-tower.png

EXTRA_DIST = $(appicon_DATA)
