## Process this file with automake to produce Makefile.in

appicondir = $(datadir)/icons/hicolor/22x22/apps
appicon_DATA = 	nm-adhoc.png \
				nm-device-wwan.png \
				nm-vpn-active-lock.png \
				nm-vpn-connecting01.png \
				nm-vpn-connecting02.png \
				nm-vpn-connecting03.png \
				nm-vpn-connecting04.png \
				nm-vpn-connecting05.png \
				nm-vpn-connecting06.png \
				nm-vpn-connecting07.png \
				nm-vpn-connecting08.png \
				nm-vpn-connecting09.png \
				nm-vpn-connecting10.png \
				nm-vpn-connecting11.png \
				nm-vpn-connecting12.png \
				nm-vpn-connecting13.png \
				nm-vpn-connecting14.png

EXTRA_DIST = $(appicon_DATA)
