## Process this file with automake to produce Makefile.in

appicondir = $(datadir)/icons/hicolor/16x16/apps
appicon_DATA = 	nm-device-wired-secure-symbolic.svg \
				nm-device-wired.svg \
				nm-device-wired-symbolic.svg \
				nm-device-wwan-symbolic.svg \
				nm-no-connection.svg \
				nm-no-connection-symbolic.svg \
				nm-signal-00-secure-symbolic.svg \
				nm-signal-00-symbolic.svg \
				nm-signal-100-secure-symbolic.svg \
				nm-signal-100-symbolic.svg \
				nm-signal-25-secure-symbolic.svg \
				nm-signal-25-symbolic.svg \
				nm-signal-50-secure-symbolic.svg \
				nm-signal-50-symbolic.svg \
				nm-signal-75-secure-symbolic.svg \
				nm-signal-75-symbolic.svg \
				nm-vpn-active-lock-symbolic.svg \
				nm-vpn-connecting01-symbolic.svg \
				nm-vpn-connecting02-symbolic.svg \
				nm-vpn-connecting03-symbolic.svg \
				nm-vpn-connecting04-symbolic.svg \
				nm-vpn-connecting05-symbolic.svg \
				nm-vpn-connecting06-symbolic.svg \
				nm-vpn-connecting07-symbolic.svg \
				nm-vpn-connecting08-symbolic.svg \
				nm-vpn-connecting09-symbolic.svg \
				nm-vpn-connecting10-symbolic.svg \
				nm-vpn-connecting11-symbolic.svg \
				nm-vpn-connecting12-symbolic.svg \
				nm-vpn-connecting13-symbolic.svg \
				nm-vpn-connecting14-symbolic.svg \
				nm-vpn-standalone-lock-symbolic.svg
				


EXTRA_DIST = $(appicon_DATA)
